@@ -3,6 +3,7 @@ Version 3.5b2 (2012-03-xx)
 	Fixed so enter within PRE elements produces a BR and shift+enter breaks/end the PRE.
 	Fixed bug where the selection wouldn't be correct after applying formatting and having the caret at the end of the new format node.
 	Fixed bug where the noneditable plugin would process contents on raw input calls for example on undo/redo calls.
+	Fixed bug where WebKit could produce an exception when a bookmark was requested when there wasn't a proper selection.
 Version 3.5b1 (2012-03-08)
 	Added new event class that is faster and enables support for faking events.
 	Added new self_closing_elements, short_ended_elements, boolean_attributes, non_empty_elements and block_elements options to control the HTML Schema.
